Added tests to hw 11

--- a/IntegralEquation/IntegralEquation.ipynb
+++ b/IntegralEquation/IntegralEquation.ipynb
@@ -16,12 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import  array, sum, cosh, zeros\n",
-    "from numpy.linalg import solve"
+    "from numpy.linalg import solve\n",
+    "\n",
+    "import pandas as pd "
    ]
   },
   {
@@ -50,7 +52,10 @@
     "def f(x):\n",
     "    return x - 0.6\n",
     "\n",
-    "c = 0.6"
+    "c = 0.6\n",
+    "\n",
+    "a = 0\n",
+    "b = 1"
    ]
   },
   {
@@ -97,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But in current task we only need nodes and points from quadrature formula."
+    "But in current task we only need points and coefficents from quadrature formula."
    ]
   },
   {
@@ -106,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def middle_rectangles_point_nodes(N, a=0, b=1):\n",
-    "    \"\"\"Composite middle rectangles formula points and nodes.\n",
+    "def middle_rectangles_points_coefficents(N, a=0, b=1):\n",
+    "    \"\"\"Composite middle rectangles formula points and coefficents.\n",
     "    \n",
     "    Args:\n",
     "        N (int): Number of partitions.\n",
@@ -115,7 +120,7 @@
     "        \n",
     "    Returns:\n",
     "        points (list<float>).\n",
-    "        nodes (list<float>).\n",
+    "        coefficents (list<float>).\n",
     "    \"\"\"\n",
     "    \n",
     "    # Length of part split.\n",
@@ -124,9 +129,26 @@
     "    points = array([a + (h / 2) + (k - 1) * h \n",
     "                    for k in range(1, N + 1)])\n",
     "    \n",
-    "    nodes = [h] * N\n",
+    "    coefficents = [h] * N\n",
     "\n",
-    "    return points, nodes"
+    "    return points, coefficents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also at some point we will need kroneker delta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kroneker_delta(x, y): \n",
+    "    return 1 if x == y else 0"
    ]
   },
   {
@@ -138,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mechanical_quadrature(H, f, N, find_points_nodes, x, c=1, a=0, b=1):\n",
+    "def mechanical_quadrature(H, f, N, find_points_coefficents, x, c=1, a=0, b=1):\n",
     "    \"\"\"Solving fredholm integral equation of the second kind. \n",
     "    \n",
     "    Using mechanical quadrature method.   \n",
@@ -153,30 +175,31 @@
     "        c (float): Constant before integral.\n",
     "        a, b (float): Integral bounds.\n",
     "        N (int): Number of points in quadrature method.\n",
-    "        find_points_nodes (func(N, a, b)): Function that returns\n",
-    "                                          points and nodes from \n",
-    "                                          appropriate quadrature \n",
-    "                                          formula.\n",
+    "        find_points_coefficents (func(N, a, b)): Function that returns\n",
+    "                                              points and coefficents from \n",
+    "                                              appropriate quadrature \n",
+    "                                              formula.\n",
     "        x (float): Point to count result function in.\n",
     "    \n",
     "    Returns:\n",
     "        result (float): value of desired function in point x.\n",
     "    \"\"\"\n",
     "    \n",
-    "    points, nodes = find_points_nodes(N, a, b)\n",
+    "    points, coefficents = find_points_coefficents(N, a, b)\n",
     "    \n",
     "    # Solving Dz=g system.\n",
     "    D = zeros(shape=(N,N))\n",
     "    for row in range(N):\n",
     "        for col in range(N):\n",
-    "            D[row][col] = nodes[col] * \\\n",
+    "            D[row][col] = kroneker_delta(row, col) - \\\n",
+    "                          coefficents[col] * \\\n",
     "                          H(points[row], points[col])\n",
     "    g = f(points)\n",
     "    z = solve(D, g)\n",
     "    \n",
     "    summ = 0\n",
     "    for i in range(N):\n",
-    "        summ += nodes[i] * H(x, points[i]) * z[i]\n",
+    "        summ += coefficents[i] * H(x, points[i]) * z[i]\n",
     "    \n",
     "    result = summ + f(x)\n",
     "    \n",
@@ -192,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,47 +225,122 @@
     "# Number of calculations.\n",
     "# Number of splits grows twice\n",
     "# as much on every iteration.\n",
-    "calcs = 6"
+    "calcs = 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generating number of splits.\n",
+    "splits = [2**i*n for i in range(calcs)]\n",
+    "\n",
+    "# Generating first column of table.\n",
+    "x_s = list(map(lambda x: 'u^({})(x)'.format(x), splits))\n",
+    "\n",
+    "# Generating values in point a.\n",
+    "a_s = [mechanical_quadrature(H,\n",
+    "                             f, \n",
+    "                             N=n,\n",
+    "                             find_points_coefficents=middle_rectangles_points_coefficents,\n",
+    "                             x=a, \n",
+    "                             c=c,\n",
+    "                             a=a,\n",
+    "                             b=b) for n in splits]\n",
+    "\n",
+    "# Generating values in point (a+b)/2.\n",
+    "a_b_s = [mechanical_quadrature(H,\n",
+    "                             f, \n",
+    "                             N=n,\n",
+    "                             find_points_coefficents=middle_rectangles_points_coefficents,\n",
+    "                             x=(a+b)/2, \n",
+    "                             c=c,\n",
+    "                             a=a,\n",
+    "                             b=b) for n in splits]\n",
+    "\n",
+    "# Generating values in point b.\n",
+    "b_s = [mechanical_quadrature(H,\n",
+    "                             f, \n",
+    "                             N=n,\n",
+    "                             find_points_coefficents=middle_rectangles_points_coefficents,\n",
+    "                             x=b, \n",
+    "                             c=c,\n",
+    "                             a=a,\n",
+    "                             b=b) for n in splits]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >$x$</th>        <th class=\"col_heading level0 col1\" >$a$</th>        <th class=\"col_heading level0 col2\" >$(a + b)/2$</th>        <th class=\"col_heading level0 col3\" >$b$</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col0\" class=\"data row0 col0\" >u^(5)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col1\" class=\"data row0 col1\" >0.860636</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col2\" class=\"data row0 col2\" >1.435083</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col3\" class=\"data row0 col3\" >2.170189</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col0\" class=\"data row1 col0\" >u^(10)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col1\" class=\"data row1 col1\" >0.824088</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col2\" class=\"data row1 col2\" >1.397904</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col3\" class=\"data row1 col3\" >2.131292</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col0\" class=\"data row2 col0\" >u^(20)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col1\" class=\"data row2 col1\" >0.815062</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col2\" class=\"data row2 col2\" >1.388722</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col3\" class=\"data row2 col3\" >2.121684</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col0\" class=\"data row3 col0\" >u^(40)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col1\" class=\"data row3 col1\" >0.812813</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col2\" class=\"data row3 col2\" >1.386433</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col3\" class=\"data row3 col3\" >2.119288</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col0\" class=\"data row4 col0\" >u^(80)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col1\" class=\"data row4 col1\" >0.812251</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col2\" class=\"data row4 col2\" >1.385861</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col3\" class=\"data row4 col3\" >2.118690</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col0\" class=\"data row5 col0\" >u^(160)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col1\" class=\"data row5 col1\" >0.812110</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col2\" class=\"data row5 col2\" >1.385718</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col3\" class=\"data row5 col3\" >2.118541</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col0\" class=\"data row6 col0\" >u^(320)(x)</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col1\" class=\"data row6 col1\" >0.812075</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col2\" class=\"data row6 col2\" >1.385682</td>\n",
+       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col3\" class=\"data row6 col3\" >2.118503</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
       "text/plain": [
-       "-1.101953125"
+       "<pandas.io.formats.style.Styler at 0x7f88a2ddda90>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mechanical_quadrature(H,\n",
-    "                      f, \n",
-    "                      N=2000,\n",
-    "                      find_points_nodes=middle_rectangles_point_nodes,\n",
-    "                      x=0, \n",
-    "                      c=c)"
+    "# Creating table.\n",
+    "data = pd.DataFrame(list(zip(x_s, a_s, a_b_s, b_s)), \n",
+    "                    columns =['$x$', '$a$', '$(a + b)/2$', '$b$'])\n",
+    "\n",
+    "data.style.hide_index()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
