--- a/IntegralEquation/IntegralEquation.ipynb
+++ b/IntegralEquation/IntegralEquation.ipynb
@@ -279,59 +279,96 @@
     {
      "data": {
       "text/html": [
-       "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >$x$</th>        <th class=\"col_heading level0 col1\" >$a$</th>        <th class=\"col_heading level0 col2\" >$(a + b)/2$</th>        <th class=\"col_heading level0 col3\" >$b$</th>    </tr></thead><tbody>\n",
-       "                <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col0\" class=\"data row0 col0\" >u^(5)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col1\" class=\"data row0 col1\" >0.860636</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col2\" class=\"data row0 col2\" >1.435083</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row0_col3\" class=\"data row0 col3\" >2.170189</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col0\" class=\"data row1 col0\" >u^(10)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col1\" class=\"data row1 col1\" >0.824088</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col2\" class=\"data row1 col2\" >1.397904</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row1_col3\" class=\"data row1 col3\" >2.131292</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col0\" class=\"data row2 col0\" >u^(20)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col1\" class=\"data row2 col1\" >0.815062</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col2\" class=\"data row2 col2\" >1.388722</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row2_col3\" class=\"data row2 col3\" >2.121684</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col0\" class=\"data row3 col0\" >u^(40)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col1\" class=\"data row3 col1\" >0.812813</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col2\" class=\"data row3 col2\" >1.386433</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row3_col3\" class=\"data row3 col3\" >2.119288</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col0\" class=\"data row4 col0\" >u^(80)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col1\" class=\"data row4 col1\" >0.812251</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col2\" class=\"data row4 col2\" >1.385861</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row4_col3\" class=\"data row4 col3\" >2.118690</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col0\" class=\"data row5 col0\" >u^(160)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col1\" class=\"data row5 col1\" >0.812110</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col2\" class=\"data row5 col2\" >1.385718</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row5_col3\" class=\"data row5 col3\" >2.118541</td>\n",
-       "            </tr>\n",
-       "            <tr>\n",
-       "                                <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col0\" class=\"data row6 col0\" >u^(320)(x)</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col1\" class=\"data row6 col1\" >0.812075</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col2\" class=\"data row6 col2\" >1.385682</td>\n",
-       "                        <td id=\"T_6aaf4f84_a738_11ea_88f1_150d77e9fea3row6_col3\" class=\"data row6 col3\" >2.118503</td>\n",
-       "            </tr>\n",
-       "    </tbody></table>"
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>$a$</th>\n",
+       "      <th>$(a + b)/2$</th>\n",
+       "      <th>$b$</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$x$</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>u^(5)(x)</th>\n",
+       "      <td>0.860636</td>\n",
+       "      <td>1.435083</td>\n",
+       "      <td>2.170189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(10)(x)</th>\n",
+       "      <td>0.824088</td>\n",
+       "      <td>1.397904</td>\n",
+       "      <td>2.131292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(20)(x)</th>\n",
+       "      <td>0.815062</td>\n",
+       "      <td>1.388722</td>\n",
+       "      <td>2.121684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(40)(x)</th>\n",
+       "      <td>0.812813</td>\n",
+       "      <td>1.386433</td>\n",
+       "      <td>2.119288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(80)(x)</th>\n",
+       "      <td>0.812251</td>\n",
+       "      <td>1.385861</td>\n",
+       "      <td>2.118690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(160)(x)</th>\n",
+       "      <td>0.812110</td>\n",
+       "      <td>1.385718</td>\n",
+       "      <td>2.118541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>u^(320)(x)</th>\n",
+       "      <td>0.812075</td>\n",
+       "      <td>1.385682</td>\n",
+       "      <td>2.118503</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f88a2ddda90>"
+       "                 $a$  $(a + b)/2$       $b$\n",
+       "$x$                                        \n",
+       "u^(5)(x)    0.860636     1.435083  2.170189\n",
+       "u^(10)(x)   0.824088     1.397904  2.131292\n",
+       "u^(20)(x)   0.815062     1.388722  2.121684\n",
+       "u^(40)(x)   0.812813     1.386433  2.119288\n",
+       "u^(80)(x)   0.812251     1.385861  2.118690\n",
+       "u^(160)(x)  0.812110     1.385718  2.118541\n",
+       "u^(320)(x)  0.812075     1.385682  2.118503"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -339,7 +376,8 @@
     "data = pd.DataFrame(list(zip(x_s, a_s, a_b_s, b_s)), \n",
     "                    columns =['$x$', '$a$', '$(a + b)/2$', '$b$'])\n",
     "\n",
-    "data.style.hide_index()"
+    "data.set_index('$x$', inplace=True)\n",
+    "display(data)"
    ]
   }
  ],
