--- a/DifferentialEquation/DifferentialEquation.ipynb
+++ b/DifferentialEquation/DifferentialEquation.ipynb
@@ -16,11 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy import exp, arange"
+    "from numpy import exp, arange, array\n",
+    "from numpy.linalg import solve\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,65 +131,256 @@
     "    h = (b - a) / n\n",
     "    points = arange(a, b + h, h)\n",
     "    \n",
-    "    return h, len(points)\n",
+    "    # ----- Generating matrix of coefficents and G vector. -----\n",
+    "    matrix = []\n",
+    "    G_vec = []\n",
+    "    \n",
+    "    # -- Filling first elements. --\n",
+    "    \n",
+    "    # Filling first row as [1, 0, 0, ...] because we\n",
+    "    # know exact value of y(a).\n",
+    "    first_row = []\n",
+    "    first_row.append(1)\n",
+    "    first_row += [0 for i in range(n)]\n",
+    "    matrix.append(first_row)\n",
+    "    \n",
+    "    # Filling first element in target array with alpha\n",
+    "    # because we know that y(a)=alpha.\n",
+    "    G_vec.append(alpha)\n",
+    "    \n",
+    "    A_s = []\n",
+    "    B_s = []\n",
+    "    C_s = []\n",
+    "    A_s.append(0)\n",
+    "    B_s.append(1)\n",
+    "    C_s.append(0)\n",
+    "    \n",
+    "    # -- Filling middle elements. --\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        A, B, C, G = prepare_coefficents(p, q, r, f, h, points[i])\n",
+    "        \n",
+    "        row = []\n",
+    "        row += [0 for j in range(i - 1)]\n",
+    "        row += [A, B, C]\n",
+    "        row += [0 for j in range(n + 1 - 3 - (i - 1))]\n",
+    "        \n",
+    "        matrix.append(row)\n",
+    "        G_vec.append(G)\n",
+    "        \n",
+    "        A_s.append(A)\n",
+    "        B_s.append(B)\n",
+    "        C_s.append(C)\n",
+    "        \n",
+    "    \n",
+    "    # -- Filling last elements. --\n",
+    "    \n",
+    "    # Filling last row as [0, 0, ..., 0, 1] because we\n",
+    "    # know exact value of y(b).\n",
+    "    last_row = []\n",
+    "    last_row += [0 for i in range(n)]\n",
+    "    last_row.append(1)\n",
+    "    matrix.append(last_row)\n",
+    "    \n",
+    "    # Filling last element in target array with beta\n",
+    "    # because we know that y(b)=beta.\n",
+    "    G_vec.append(beta)\n",
+    "    \n",
+    "    A_s.append(0)\n",
+    "    B_s.append(1)\n",
+    "    C_s.append(0)\n",
+    "    \n",
+    "    # ----- Solving equation. -----\n",
+    "    Y = solve(matrix, G_vec)\n",
+    "    \n",
+    "    \n",
+    "    return Y, points, [A_s, B_s, C_s, G_vec]\n",
     "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "_, _, _, G = prepare_coefficents(p, q, r, f, (b-a)/10, 0.5)"
+    "# Testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of splits.\n",
+    "n = 10\n",
+    "\n",
+    "Y, x_s, stats = solve_equation(p, q, r, f, a, b, alpha, beta, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>$A_i$</th>\n",
+       "      <th>$B_i$</th>\n",
+       "      <th>$C_i$</th>\n",
+       "      <th>$G_i$</th>\n",
+       "      <th>$y_i$</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$x_i$</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>-1.000000e+00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-3.814695e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-8.000000e-01</th>\n",
+       "      <td>6.518947</td>\n",
+       "      <td>12.487575</td>\n",
+       "      <td>6.638947</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>8.690983e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-6.000000e-01</th>\n",
+       "      <td>6.874444</td>\n",
+       "      <td>13.148071</td>\n",
+       "      <td>7.014444</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.582800e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-4.000000e-01</th>\n",
+       "      <td>7.272941</td>\n",
+       "      <td>13.887152</td>\n",
+       "      <td>7.432941</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>-1.986387e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-2.000000e-01</th>\n",
+       "      <td>7.722500</td>\n",
+       "      <td>14.720163</td>\n",
+       "      <td>7.902500</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.412883e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-2.220446e-16</th>\n",
+       "      <td>8.233333</td>\n",
+       "      <td>15.666667</td>\n",
+       "      <td>8.433333</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-3.494906e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2.000000e-01</th>\n",
+       "      <td>8.818571</td>\n",
+       "      <td>16.751972</td>\n",
+       "      <td>9.038571</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>4.555824e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4.000000e-01</th>\n",
+       "      <td>9.495385</td>\n",
+       "      <td>18.009366</td>\n",
+       "      <td>9.735385</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>-3.042401e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6.000000e-01</th>\n",
+       "      <td>10.286667</td>\n",
+       "      <td>19.483475</td>\n",
+       "      <td>10.546667</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2.828076e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8.000000e-01</th>\n",
+       "      <td>11.223636</td>\n",
+       "      <td>21.235448</td>\n",
+       "      <td>11.503636</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>-9.296391e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.000000e+00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "1.5"
+       "                   $A_i$      $B_i$      $C_i$  $G_i$         $y_i$\n",
+       "$x_i$                                                              \n",
+       "-1.000000e+00   0.000000   1.000000   0.000000    0.0 -3.814695e-17\n",
+       "-8.000000e-01   6.518947  12.487575   6.638947    2.8  8.690983e-02\n",
+       "-6.000000e-01   6.874444  13.148071   7.014444    2.6  2.582800e-01\n",
+       "-4.000000e-01   7.272941  13.887152   7.432941    2.4 -1.986387e-01\n",
+       "-2.000000e-01   7.722500  14.720163   7.902500    2.2  4.412883e-01\n",
+       "-2.220446e-16   8.233333  15.666667   8.433333    2.0 -3.494906e-01\n",
+       " 2.000000e-01   8.818571  16.751972   9.038571    1.8  4.555824e-01\n",
+       " 4.000000e-01   9.495385  18.009366   9.735385    1.6 -3.042401e-01\n",
+       " 6.000000e-01  10.286667  19.483475  10.546667    1.4  2.828076e-01\n",
+       " 8.000000e-01  11.223636  21.235448  11.503636    1.2 -9.296391e-02\n",
+       " 1.000000e+00   0.000000   1.000000   0.000000    0.0  0.000000e+00"
       ]
      },
-     "execution_count": 16,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "G"
+    "# Creating table.\n",
+    "data = pd.DataFrame(list(zip(x_s, stats[0], stats[1],\n",
+    "                             stats[2], stats[3], Y)), \n",
+    "                    columns =['$x_i$', '$A_i$', '$B_i$', \n",
+    "                              '$C_i$', '$G_i$', '$y_i$'])\n",
+    "\n",
+    "data.set_index('$x_i$', inplace=True)\n",
+    "display(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.2, 11)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "solve_equation(p, q, r, f, a, b, alpha, beta, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
