--- a/DifferentialEquation/DifferentialEquation.ipynb
+++ b/DifferentialEquation/DifferentialEquation.ipynb
@@ -162,7 +162,7 @@
     "        \n",
     "        row = []\n",
     "        row += [0 for j in range(i - 1)]\n",
-    "        row += [A, B, C]\n",
+    "        row += [A, -B, C]\n",
     "        row += [0 for j in range(n + 1 - 3 - (i - 1))]\n",
     "        \n",
     "        matrix.append(row)\n",
@@ -171,7 +171,6 @@
     "        A_s.append(A)\n",
     "        B_s.append(B)\n",
     "        C_s.append(C)\n",
-    "        \n",
     "    \n",
     "    # -- Filling last elements. --\n",
     "    \n",
@@ -193,9 +192,7 @@
     "    # ----- Solving equation. -----\n",
     "    Y = solve(matrix, G_vec)\n",
     "    \n",
-    "    \n",
-    "    return Y, points, [A_s, B_s, C_s, G_vec]\n",
-    "    "
+    "    return Y, points, [A_s, B_s, C_s, G_vec]"
    ]
   },
   {
@@ -260,111 +257,111 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>-1.000000e+00</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>-1.0</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>-3.814695e-17</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-8.000000e-01</th>\n",
-       "      <td>6.518947</td>\n",
-       "      <td>12.487575</td>\n",
-       "      <td>6.638947</td>\n",
+       "      <th>-0.8</th>\n",
+       "      <td>6.5189</td>\n",
+       "      <td>12.4876</td>\n",
+       "      <td>6.6389</td>\n",
        "      <td>2.8</td>\n",
-       "      <td>8.690983e-02</td>\n",
+       "      <td>3.9542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-6.000000e-01</th>\n",
-       "      <td>6.874444</td>\n",
-       "      <td>13.148071</td>\n",
-       "      <td>7.014444</td>\n",
+       "      <th>-0.6</th>\n",
+       "      <td>6.8744</td>\n",
+       "      <td>13.1481</td>\n",
+       "      <td>7.0144</td>\n",
        "      <td>2.6</td>\n",
-       "      <td>2.582800e-01</td>\n",
+       "      <td>7.8594</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-4.000000e-01</th>\n",
-       "      <td>7.272941</td>\n",
-       "      <td>13.887152</td>\n",
-       "      <td>7.432941</td>\n",
+       "      <th>-0.4</th>\n",
+       "      <td>7.2729</td>\n",
+       "      <td>13.8872</td>\n",
+       "      <td>7.4329</td>\n",
        "      <td>2.4</td>\n",
-       "      <td>-1.986387e-01</td>\n",
+       "      <td>11.2272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-2.000000e-01</th>\n",
-       "      <td>7.722500</td>\n",
-       "      <td>14.720163</td>\n",
-       "      <td>7.902500</td>\n",
+       "      <th>-0.2</th>\n",
+       "      <td>7.7225</td>\n",
+       "      <td>14.7202</td>\n",
+       "      <td>7.9025</td>\n",
        "      <td>2.2</td>\n",
-       "      <td>4.412883e-01</td>\n",
+       "      <td>13.6088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>-2.220446e-16</th>\n",
-       "      <td>8.233333</td>\n",
-       "      <td>15.666667</td>\n",
-       "      <td>8.433333</td>\n",
+       "      <th>-0.0</th>\n",
+       "      <td>8.2333</td>\n",
+       "      <td>15.6667</td>\n",
+       "      <td>8.4333</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>-3.494906e-01</td>\n",
+       "      <td>14.6563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2.000000e-01</th>\n",
-       "      <td>8.818571</td>\n",
-       "      <td>16.751972</td>\n",
-       "      <td>9.038571</td>\n",
+       "      <th>0.2</th>\n",
+       "      <td>8.8186</td>\n",
+       "      <td>16.7520</td>\n",
+       "      <td>9.0386</td>\n",
        "      <td>1.8</td>\n",
-       "      <td>4.555824e-01</td>\n",
+       "      <td>14.1783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4.000000e-01</th>\n",
-       "      <td>9.495385</td>\n",
-       "      <td>18.009366</td>\n",
-       "      <td>9.735385</td>\n",
+       "      <th>0.4</th>\n",
+       "      <td>9.4954</td>\n",
+       "      <td>18.0094</td>\n",
+       "      <td>9.7354</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>-3.042401e-01</td>\n",
+       "      <td>12.1774</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6.000000e-01</th>\n",
-       "      <td>10.286667</td>\n",
-       "      <td>19.483475</td>\n",
-       "      <td>10.546667</td>\n",
+       "      <th>0.6</th>\n",
+       "      <td>10.2867</td>\n",
+       "      <td>19.4835</td>\n",
+       "      <td>10.5467</td>\n",
        "      <td>1.4</td>\n",
-       "      <td>2.828076e-01</td>\n",
+       "      <td>8.8624</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8.000000e-01</th>\n",
-       "      <td>11.223636</td>\n",
-       "      <td>21.235448</td>\n",
-       "      <td>11.503636</td>\n",
+       "      <th>0.8</th>\n",
+       "      <td>11.2236</td>\n",
+       "      <td>21.2354</td>\n",
+       "      <td>11.5036</td>\n",
        "      <td>1.2</td>\n",
-       "      <td>-9.296391e-02</td>\n",
+       "      <td>4.6275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1.000000e+00</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <th>1.0</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   $A_i$      $B_i$      $C_i$  $G_i$         $y_i$\n",
-       "$x_i$                                                              \n",
-       "-1.000000e+00   0.000000   1.000000   0.000000    0.0 -3.814695e-17\n",
-       "-8.000000e-01   6.518947  12.487575   6.638947    2.8  8.690983e-02\n",
-       "-6.000000e-01   6.874444  13.148071   7.014444    2.6  2.582800e-01\n",
-       "-4.000000e-01   7.272941  13.887152   7.432941    2.4 -1.986387e-01\n",
-       "-2.000000e-01   7.722500  14.720163   7.902500    2.2  4.412883e-01\n",
-       "-2.220446e-16   8.233333  15.666667   8.433333    2.0 -3.494906e-01\n",
-       " 2.000000e-01   8.818571  16.751972   9.038571    1.8  4.555824e-01\n",
-       " 4.000000e-01   9.495385  18.009366   9.735385    1.6 -3.042401e-01\n",
-       " 6.000000e-01  10.286667  19.483475  10.546667    1.4  2.828076e-01\n",
-       " 8.000000e-01  11.223636  21.235448  11.503636    1.2 -9.296391e-02\n",
-       " 1.000000e+00   0.000000   1.000000   0.000000    0.0  0.000000e+00"
+       "         $A_i$    $B_i$    $C_i$  $G_i$    $y_i$\n",
+       "$x_i$                                           \n",
+       "-1.0    0.0000   1.0000   0.0000    0.0   0.0000\n",
+       "-0.8    6.5189  12.4876   6.6389    2.8   3.9542\n",
+       "-0.6    6.8744  13.1481   7.0144    2.6   7.8594\n",
+       "-0.4    7.2729  13.8872   7.4329    2.4  11.2272\n",
+       "-0.2    7.7225  14.7202   7.9025    2.2  13.6088\n",
+       "-0.0    8.2333  15.6667   8.4333    2.0  14.6563\n",
+       " 0.2    8.8186  16.7520   9.0386    1.8  14.1783\n",
+       " 0.4    9.4954  18.0094   9.7354    1.6  12.1774\n",
+       " 0.6   10.2867  19.4835  10.5467    1.4   8.8624\n",
+       " 0.8   11.2236  21.2354  11.5036    1.2   4.6275\n",
+       " 1.0    0.0000   1.0000   0.0000    0.0   0.0000"
       ]
      },
      "metadata": {},
@@ -377,6 +374,8 @@
     "                             stats[2], stats[3], Y)), \n",
     "                    columns =['$x_i$', '$A_i$', '$B_i$', \n",
     "                              '$C_i$', '$G_i$', '$y_i$'])\n",
+    "\n",
+    "data = data.round(4)\n",
     "\n",
     "data.set_index('$x_i$', inplace=True)\n",
     "display(data)"
