Added thomas method to hw 12

--- a/DifferentialEquation/DifferentialEquation.ipynb
+++ b/DifferentialEquation/DifferentialEquation.ipynb
@@ -133,7 +133,10 @@
     "    \n",
     "    # ----- Generating matrix of coefficents and G vector. -----\n",
     "    matrix = []\n",
-    "    G_vec = []\n",
+    "    G_s = []\n",
+    "    A_s = []\n",
+    "    B_s = []\n",
+    "    C_s = []\n",
     "    \n",
     "    # -- Filling first elements. --\n",
     "    \n",
@@ -146,11 +149,8 @@
     "    \n",
     "    # Filling first element in target array with alpha\n",
     "    # because we know that y(a)=alpha.\n",
-    "    G_vec.append(alpha)\n",
+    "    G_s.append(alpha)\n",
     "    \n",
-    "    A_s = []\n",
-    "    B_s = []\n",
-    "    C_s = []\n",
     "    A_s.append(0)\n",
     "    B_s.append(1)\n",
     "    C_s.append(0)\n",
@@ -166,7 +166,7 @@
     "        row += [0 for j in range(n + 1 - 3 - (i - 1))]\n",
     "        \n",
     "        matrix.append(row)\n",
-    "        G_vec.append(G)\n",
+    "        G_s.append(G)\n",
     "        \n",
     "        A_s.append(A)\n",
     "        B_s.append(B)\n",
@@ -183,16 +183,107 @@
     "    \n",
     "    # Filling last element in target array with beta\n",
     "    # because we know that y(b)=beta.\n",
-    "    G_vec.append(beta)\n",
+    "    G_s.append(beta)\n",
     "    \n",
     "    A_s.append(0)\n",
     "    B_s.append(1)\n",
     "    C_s.append(0)\n",
     "    \n",
     "    # ----- Solving equation. -----\n",
-    "    Y = solve(matrix, G_vec)\n",
+    "    Y = solve(matrix, G_s)\n",
     "    \n",
-    "    return Y, points, [A_s, B_s, C_s, G_vec]"
+    "    return Y, points, [A_s, B_s, C_s, G_s]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This method differs from previous method in way of solving tridiagonal matrix. Above algorithm I invented(?) myself (moving coefficents in rows). Method below is tridiagonal matrix algorithm, also known as the Thomas algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solve_equation_thomas(p, q, r, f, a, b, alpha, beta, n):\n",
+    "    \"\"\"Solve differential equation with boundaries.\n",
+    "    \n",
+    "    Using tridiagonal matrix algorithm \n",
+    "    \n",
+    "    Args:\n",
+    "        p, q, r, f (fun(x)): boundary value functions.\n",
+    "        a, b (float): Bounds.\n",
+    "        alpha, beta (float): Bound values.\n",
+    "        n (int): Number of splits.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Y (array-like<float>): Values of desired function\n",
+    "                              in (n + 1) points on (a, b)\n",
+    "                              with step h=(b-a)/n.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    h = (b - a) / n\n",
+    "    points = arange(a, b + h, h)\n",
+    "    \n",
+    "    # ----- Generating matrix of coefficents and G vector. -----\n",
+    "    G_s = []\n",
+    "    A_s = []\n",
+    "    B_s = []\n",
+    "    C_s = []\n",
+    "    \n",
+    "    # -- Filling first elements. --\n",
+    "    \n",
+    "    # Filling first element in target array with alpha\n",
+    "    # because we know that y(a)=alpha.\n",
+    "    G_s.append(alpha)\n",
+    "    \n",
+    "    A_s.append(0)\n",
+    "    B_s.append(1)\n",
+    "    C_s.append(0)\n",
+    "    \n",
+    "    # -- Filling middle elements. --\n",
+    "    \n",
+    "    for i in range(1, n):\n",
+    "        A, B, C, G = prepare_coefficents(p, q, r, f, h, points[i])\n",
+    "        \n",
+    "        A_s.append(A)\n",
+    "        B_s.append(B)\n",
+    "        C_s.append(C)\n",
+    "        G_s.append(G)\n",
+    "    \n",
+    "    # -- Filling last elements. --\n",
+    "    \n",
+    "    # Filling last element in target array with beta\n",
+    "    # because we know that y(b)=beta.\n",
+    "    G_s.append(beta)\n",
+    "    \n",
+    "    A_s.append(0)\n",
+    "    B_s.append(1)\n",
+    "    C_s.append(0)\n",
+    "    \n",
+    "    # ----- Solving equation. -----\n",
+    "    \n",
+    "    # -- Filling s and t coefficents. --\n",
+    "    s = []\n",
+    "    t = []\n",
+    "    s.append(C_s[0] / B_s[0])\n",
+    "    t.append(-G_s[0] / B_s[0])\n",
+    "    for i in range(1, n + 1):\n",
+    "        s.append(C_s[i] / (B_s[i] - A_s[i] * s[i - 1]))\n",
+    "        t.append((A_s[i] * t[i - 1] - G_s[i]) / (B_s[i] - A_s[i] * s[i-1]))\n",
+    "    \n",
+    "    # -- Filling solution array backwards. --\n",
+    "    Y = []\n",
+    "    Y.append(beta)\n",
+    "    for i in range(n - 1, -1, -1):\n",
+    "        Y.append(s[i] * Y[n - i - 1] + t[i])\n",
+    "    \n",
+    "    Y.reverse()\n",
+    "    \n",
+    "    return Y, points, [A_s, B_s, C_s, G_s, s, t]"
    ]
   },
   {
@@ -203,8 +294,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using my method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,6 +472,220 @@
     "                             stats[2], stats[3], Y)), \n",
     "                    columns =['$x_i$', '$A_i$', '$B_i$', \n",
     "                              '$C_i$', '$G_i$', '$y_i$'])\n",
+    "\n",
+    "data = data.round(4)\n",
+    "\n",
+    "data.set_index('$x_i$', inplace=True)\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using Thomas method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of splits.\n",
+    "n = 10\n",
+    "\n",
+    "Y, x_s, stats = solve_equation_thomas(p, q, r, f, a, b, alpha, beta, n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>$A_i$</th>\n",
+       "      <th>$B_i$</th>\n",
+       "      <th>$C_i$</th>\n",
+       "      <th>$G_i$</th>\n",
+       "      <th>$s_i$</th>\n",
+       "      <th>$t_i$</th>\n",
+       "      <th>$y_i$</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$x_i$</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>-1.0</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.8</th>\n",
+       "      <td>6.5189</td>\n",
+       "      <td>12.4876</td>\n",
+       "      <td>6.6389</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>0.5316</td>\n",
+       "      <td>-0.2242</td>\n",
+       "      <td>3.9542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.6</th>\n",
+       "      <td>6.8744</td>\n",
+       "      <td>13.1481</td>\n",
+       "      <td>7.0144</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.7389</td>\n",
+       "      <td>-0.4362</td>\n",
+       "      <td>7.8594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.4</th>\n",
+       "      <td>7.2729</td>\n",
+       "      <td>13.8872</td>\n",
+       "      <td>7.4329</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.8731</td>\n",
+       "      <td>-0.6546</td>\n",
+       "      <td>11.2272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.2</th>\n",
+       "      <td>7.7225</td>\n",
+       "      <td>14.7202</td>\n",
+       "      <td>7.9025</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.9906</td>\n",
+       "      <td>-0.9094</td>\n",
+       "      <td>13.6088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>-0.0</th>\n",
+       "      <td>8.2333</td>\n",
+       "      <td>15.6667</td>\n",
+       "      <td>8.4333</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1228</td>\n",
+       "      <td>-1.2632</td>\n",
+       "      <td>14.6563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.2</th>\n",
+       "      <td>8.8186</td>\n",
+       "      <td>16.7520</td>\n",
+       "      <td>9.0386</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.3194</td>\n",
+       "      <td>-1.8889</td>\n",
+       "      <td>14.1783</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.4</th>\n",
+       "      <td>9.4954</td>\n",
+       "      <td>18.0094</td>\n",
+       "      <td>9.7354</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>1.7762</td>\n",
+       "      <td>-3.5643</td>\n",
+       "      <td>12.1774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.6</th>\n",
+       "      <td>10.2867</td>\n",
+       "      <td>19.4835</td>\n",
+       "      <td>10.5467</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>8.7023</td>\n",
+       "      <td>-31.4081</td>\n",
+       "      <td>8.8624</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.8</th>\n",
+       "      <td>11.2236</td>\n",
+       "      <td>21.2354</td>\n",
+       "      <td>11.5036</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>-0.1505</td>\n",
+       "      <td>4.6275</td>\n",
+       "      <td>4.6275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         $A_i$    $B_i$    $C_i$  $G_i$   $s_i$    $t_i$    $y_i$\n",
+       "$x_i$                                                            \n",
+       "-1.0    0.0000   1.0000   0.0000    0.0  0.0000   0.0000   0.0000\n",
+       "-0.8    6.5189  12.4876   6.6389    2.8  0.5316  -0.2242   3.9542\n",
+       "-0.6    6.8744  13.1481   7.0144    2.6  0.7389  -0.4362   7.8594\n",
+       "-0.4    7.2729  13.8872   7.4329    2.4  0.8731  -0.6546  11.2272\n",
+       "-0.2    7.7225  14.7202   7.9025    2.2  0.9906  -0.9094  13.6088\n",
+       "-0.0    8.2333  15.6667   8.4333    2.0  1.1228  -1.2632  14.6563\n",
+       " 0.2    8.8186  16.7520   9.0386    1.8  1.3194  -1.8889  14.1783\n",
+       " 0.4    9.4954  18.0094   9.7354    1.6  1.7762  -3.5643  12.1774\n",
+       " 0.6   10.2867  19.4835  10.5467    1.4  8.7023 -31.4081   8.8624\n",
+       " 0.8   11.2236  21.2354  11.5036    1.2 -0.1505   4.6275   4.6275\n",
+       " 1.0    0.0000   1.0000   0.0000    0.0  0.0000   0.0000   0.0000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Creating table.\n",
+    "data = pd.DataFrame(list(zip(x_s, stats[0], stats[1],\n",
+    "                             stats[2], stats[3],\n",
+    "                             stats[4], stats[5], Y)), \n",
+    "                    columns =['$x_i$', '$A_i$', '$B_i$', \n",
+    "                              '$C_i$', '$G_i$', '$s_i$',\n",
+    "                              '$t_i$', '$y_i$'])\n",
     "\n",
     "data = data.round(4)\n",
     "\n",
